# R-TYPE

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  README.md  build.sh  changelog.config.js  compile_flags.txt  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  run.sh
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build_check.yml  push_to_main_repo.yml
Client/: CMakeLists.txt  run.sh
Client/include/: ECS.hpp  button.hpp  commandsToServer.hpp  createEntity.hpp  ennemies.hpp  ipAdress.hpp  sfml.hpp  window.hpp
Client/include/menu/: inGame.hpp  inLoopGame.hpp  inLoopMenus.hpp  menus.hpp  settingMenu.hpp
Client/include/menu/introMenu/: introMenu.hpp
Client/include/music/: music.hpp  sounds.hpp
Client/include/sprite/: sprite.hpp
Client/src/: button.cpp  commandsToServer.cpp  createEntity.cpp  ennemies.cpp  main.cpp  save_main.cpp  server.cpp  window.cpp
Client/src/menu/: inGame.cpp  inLoopGame.cpp  inLoopMenus.cpp  menus.cpp  settingMenu.cpp
Client/src/menu/introMenu/: introMenu.cpp
Client/src/music/: sounds.cpp
Client/src/player/: movements.cpp
Client/src/sprite/: sprite.cpp
Docs/: RFC[ProtocolRtype].txt  client.md  gameEngine.md  protocol.md  rfc-42000.txt  server.md  techGameEngine.md
ECS/: ecs.md
ECS/include/: components.hpp  entities.hpp
ECS/src/: components.cpp  entities.cpp  life.cpp  main.cpp  position.cpp  systems.cpp
GameEngine/: CMakeLists.txt  ecs.md  run.sh
GameEngine/include/: DLLoader.hpp  Systems.hpp  components.hpp  entities.hpp  registry.hpp  systems.hpp
GameEngine/src/: Clock.cpp  Damage.cpp  EntitiesManager.cpp  Gravity.cpp  HealthPoint.cpp  HitBox.cpp  ID.cpp  Network.cpp  Position.cpp  PowerUp.cpp  Registry.cpp  Renderer.cpp  RendererComponent.cpp  Score.cpp  Shooter.cpp  Size.cpp  Speed.cpp  Systems.cpp  Type.cpp  Velocity.cpp  entities.cpp  main.cpp
Server/: .clang-format  CMakeLists.txt  run.sh
Server/include/: client.hpp  command.hpp  server.hpp
Server/src/: client.cpp  command.cpp  communication.cpp  entity.cpp  game.cpp  main.cpp  server.cpp
include/: GUI.hpp  SFML.hpp  button.hpp  define.hpp  include.hpp  mainMenu.hpp  menu.hpp  music.hpp  sprite.hpp
include/menu/: inGame.hpp
include/menu/introMenu/: introMenu.hpp
include/menu/mainMenu/: mainMenu.hpp
include/music/: music.hpp
include/sprite/: sprite.hpp
server_example/: clock.c  game.c  game_manage.c  get_opt.c  main.c
server_example/client/: client_struct.c  handle_client.c  handle_client_in.c  handle_client_out.c  handle_send_client.c
server_example/server/: client.c  loop_server.c  map.c  server.c  server_struct.c
src/: main.cpp  mainMenu.cpp  main_menu.cpp  menu.cpp  music.cpp  sprite.cpp
src/menu/: inGame.cpp
src/menu/introMenu/: introMenu.cpp
src/menu/mainMenu/: mainMenu.cpp  mainMenuMusic.cpp  mainMenuSprite.cpp
src/music/: music.cpp
src/sprite/: sprite.cpp
